Fix all instances of "new Integer" (et cetera).
(This doesn't include libcore/xml/ because I don't want to get in the way there.)

Change-Id: I46f638105d26e82d09128fca605117322229e146